Creating a directory in the file browser (by typing it in the file path) crashes Blender #43706

Closed
opened 2015-02-17 10:41:29 +01:00 by Jasper van Nieuwenhuizen · 5 comments

System Information
OS X 10.8.5 (12F45)
NVIDIA GeForce GT 650M 1024 MB

Blender Version
Broken: 2.73.8 (cdc1dab)
Worked: official 2.73a (bbf09d9)

Short description of error
When I try to create a directory in the file browser by typing the name in the file path, I get the pop up "OK? Create New Directory". So far so good. But when I click on the popup Blender crashes (the directory gets created though).
If I use the button "Create New Directory" it works fine.

Exact steps for others to reproduce the error
Open Blender. Go to the file browser (open file, save, save as..., it shouldn't matter). Click on the file path (directory) entry and type a new name at the end, press Enter. The popup should appear and when you click on it, Blender crashes.

**System Information** OS X 10.8.5 (12F45) NVIDIA GeForce GT 650M 1024 MB **Blender Version** Broken: 2.73.8 (cdc1dab) Worked: official 2.73a (bbf09d9) **Short description of error** When I try to create a directory in the file browser by typing the name in the file path, I get the pop up "OK? Create New Directory". So far so good. But when I click on the popup Blender crashes (the directory gets created though). If I use the button "Create New Directory" it works fine. **Exact steps for others to reproduce the error** Open Blender. Go to the file browser (open file, save, save as..., it shouldn't matter). Click on the file path (directory) entry and type a new name at the end, press Enter. The popup should appear and when you click on it, Blender crashes.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jasperge-2

Added subscriber: @jasperge-2

This issue was referenced by 7307f3b485

This issue was referenced by 7307f3b48564191dfcf2ccd71e730c41c6486289

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7307f3b485.

Closed by commit 7307f3b485.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43706
No description provided.