Fix T43706: Creating a directory in the file browser (by typing it in the file path) crashes Blender

Issue was caused by 2e9105c, free() does nothing if pointer is NULL, but guarded
allocator expects you to not free NULL.